--- a/000-default.conf
+++ b/000-default.conf
@@ -11,7 +11,7 @@
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/html
         ProxyRequests on
-        ProxyPassMatch ^/(.*\.php)$ fcgi://10.0.3.90:9000/data/www/$1
+        ProxyPassMatch ^/(.*\.php)$ fcgi://elbHostName:9000/data/www/$1
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
