--- a/www.conf
+++ b/www.conf
@@ -36,7 +36,7 @@ group = www-data
 ;listen = /run/php/php7.0-fpm.sock
 
 listen = 0.0.0.0:9000
-listen.allowed_clients = 10.0.0.0/16
+listen.allowed_clients = elbHostName
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
